--- a/index.html
+++ b/index.html
@@ -1,10 +1,52 @@
 <html>
     <head>
-    <title>HTML Learning</title>
+    <title>Resume</title>
 </head>
 <body>
-<h1>Hello World</h1>
-<a href="praveenneymar20@gmil.com" target="_blanks">Email Id</a>
-<a href="9884315897" target="_blank">mobile no</a>
+<div id="header">
+    <h1> Praveen Nagaraj</h1>
+    <h3>Electronics & Instrumentation</h3>
+    <p>To secure a challenging position in a reputable organization to expand my learnings, knowledge, and skills.
+Secure a responsible career opportunity to fully utilize my training and skills, while making a significant contribution to the success of the company.</p>
+</div>
+<div id="contact"> 
+    <a href="prawinaga10@gmail.com" target="_blank">Email Id</a>
+    <a href="9884315897" target="_blank">Mobile No</a>
+    <a href="https://www.google.com/maps/place/Anna+Nagar,+Thanjavur,+Tamil+Nadu+613001/@10.7686171,79.1360059,15z/data=!3m1!4b1!4m5!3m4!1s0x3baab8f2a72b3ae7:0x80df5b015f59a181!8m2!3d10.7685963!4d79.1447607" target="_blank">Location</a>
+
+</div>
+<div id="main content">
+    <div id="left">
+        <div class="content-box">
+            <h2>Education</h2>
+        </div>
+        <div class="content-box">
+            <h2>Work Experience</h2>
+        </div>
+    </div>
+    <div id="right">
+        <div class="content-box">
+            <h2>Soft Skills</h2>
+        </div>
+        <div class="content-box">
+            <h2>Personal Projects</h2>
+        </div>
+        <div class="content-box">
+            <h2>Certificates</h2>
+        </div>
+        <div class="content-box">
+            <h2>Languages</h2>
+        </div>
+        <div class="content-box">
+            <h2>Interests</h2>
+        </div>
+    </div>
+</div>
+
+
+
+
+
+
 </body>
 </html>
