--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
                     <h3>Short term trainee </h3>
                     <h4>Delphi TVS </h4>
                     <div>
-                        <span class="highlight-text-2">08/2020 - 06/2021</span>
-                        <span class="highlight-text-2">Chennai</span>
+                        <span class="highlight-text-1">08/2020 - 06/2021</span>
+                        <span class="highlight-text-1">Chennai</span>
                     </div>
                     <div>
-                        <span class="highlight-text-2">Achievements/Task</span>              
+                        <span class="highlight-text-1">Achievements/Task</span>              
                     </div>
                  <ul>
                      <li>Responsible for the various process in heat treatment department such as LPC ( low pressure carburising, chemical blackening, thermal method of deburring) and various knowledge about the processes</li>
@@ -67,8 +67,8 @@
                 <h3>Assistant technician  </h3>
                 <h4>TATA motors </h4>
                 <div>
-                    <span class="highlight-text-2">05/2019 - 07/2019</span>
-                    <span class="highlight-text-2">Tirunelveli</span>
+                    <span class="highlight-text-1">05/2019 - 07/2019</span>
+                    <span class="highlight-text-1">Tirunelveli</span>
                 </div>
                 <div>
                     <span class="highlight-text-1">Achievements/Task</span>              
@@ -83,20 +83,78 @@
     </div>
     <div id="right">
         <div class="content-box">
-            <span class="highlight-text-1">90.4%</span> 
             <h2>Soft Skills</h2>
+            <div class="content-box-tags-1">
+                <div class="content-box-tag-1">CAD</div>
+                <div class="content-box-tag-1">Solid Works</div>
+                <div class="content-box-tag-1">Team Player</div>
+                <div class="content-box-tag-1">Adaptability</div>
+                <div class="content-box-tag-1">Team Management</div>
+                <div class="content-box-tag-1">Efficient</div>
+                <div class="content-box-tag-1">Problem Solving</div>
+                <div class="content-box-tag-1">Keen Listener</div>
+            </div>
         </div>
         <div class="content-box">
             <h2>Personal Projects</h2>
+            <div class="content-box-details">
+                <div class="content-box-detail">
+                    <h5>Synthesis and characteristics of waste plastic oil by ultrasonication (04/2019) </h5>
+                    <ul>
+                        <li>Conversion of waste plastic into plastic oil by pyrolysis, then mixed with ethanol and converted into biofuel by transesteriﬁcation and ultrasonication </li>
+                    </ul>
+                </div>
+                <div class="content-box-detail">
+                    <h5>Gearless power transmission in angular position (12/2018)</h5>
+                    <ul>
+                        <li>Transformation of power in horizontal or veritcal position without using the gear inorder to reduce the wear and tear
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
         <div class="content-box">
             <h2>Certificates</h2>
+            <div class="content-box-details">
+                <div class="content-box-detail">
+                    <h5>Prodigy workshop on Ansys and Creo (10/2018)</h5>
+                    <span class="highlight-text-2">Basics of the softwares and tools</span>
+                </div>
+                <div class="content-box-detail">
+                    <h5>3D Printing (09/2018)</h5>
+                    <span class="highlight-text-2">Evloution of 3D printers and the usage of 3D printers in the current world </span>
+                </div>
+                <div class="content-box-detail">
+                    <h5>Recent trends in automobile engineering 2k18 (02/2018)</h5>
+                    <span class="highlight-text-2">A workshop about automobile basics , current trends and ﬁfth wheel drive
+                    </span>
+                </div>
+            </div>
         </div>
         <div class="content-box">
             <h2>Languages</h2>
+            <div class="content-box-details">
+                <div class="content-box-detail">
+                    <h5>Tamil</h5>
+                    <span class="highlight-text-2">Mother tongue</span>
+                </div>
+                <div class="content-box-detail">
+                    <h5>English</h5>
+                    <span class="highlight-text-2">Advanced in speaking and writing</span>
+                </div>
+                <div class="content-box-detail">
+                    <h5>Hindi</h5>
+                    <span class="highlight-text-2">Beginner in speaking and writing</span>
+                </div>
+            </div>
         </div>
         <div class="content-box">
             <h2>Interests</h2>
+            <div class=content-box-tags-2>
+                <div class="content-box-tags-2">Playing Football</div>
+                <div class="content-box-tags-2">Watching Football</div>
+                <div class="content-box-tags-2">Swimming</div>
+            </div>
         </div>
     
 
