--- a/index.html
+++ b/index.html
@@ -1,161 +1,161 @@
 <html>
-    <head>
-    <title>Resume</title>
-    <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-<div id="header">
-    <h1> Praveen Nagaraj</h1>
-    <h3>Electronics & Instrumentation</h3>
-    <p>To secure a challenging position in a reputable organization to expand my learnings, knowledge, and skills.
-        Secure a responsible career opportunity to fully utilize my training and skills, while making a significant contribution to the success of the company.</p>
-</div>
-<div id="contact"> 
-    <a href="prawinaga10@gmail.com" target="_blank">Email Id</a>
-    <a href="9884315897" target="_blank">Mobile No</a>
-    <a href="https://www.google.com/maps/place/Anna+Nagar,+Thanjavur,+Tamil+Nadu+613001/@10.7686171,79.1360059,15z/data=!3m1!4b1!4m5!3m4!1s0x3baab8f2a72b3ae7:0x80df5b015f59a181!8m2!3d10.7685963!4d79.1447607" target="_blank">Location</a>
-
-</div>
-<div id="main content">
-    <div id="left">
-        <div class="content-box">
-            <h2>Education</h2>
-            <div class="content-box-details">
-                <div class="content-box-detail">
-                    <h3>Bachelor of Engineering </h3>
-                    <h4>Electronic & Instrumentation</h4>
-                   <div>
+   <head>
+      <title>Resume</title>
+      <link rel="stylesheet" href="css/main.css">
+   </head>
+   <body>
+      <div id="header">
+         <h1> Praveen Nagaraj</h1>
+         <h3>Electronics & Instrumentation</h3>
+         <p>To secure a challenging position in a reputable organization to expand my learnings, knowledge, and skills.
+            Secure a responsible career opportunity to fully utilize my training and skills, while making a significant contribution to the success of the company.
+         </p>
+      </div>
+      <div id="contact"> 
+         <a href="prawinaga10@gmail.com" target="_blank">Email Id</a>
+         <a href="9884315897" target="_blank">Mobile No</a>
+         <a href="https://www.google.com/maps/place/Anna+Nagar,+Thanjavur,+Tamil+Nadu+613001/@10.7686171,79.1360059,15z/data=!3m1!4b1!4m5!3m4!1s0x3baab8f2a72b3ae7:0x80df5b015f59a181!8m2!3d10.7685963!4d79.1447607" target="_blank">Location</a>
+      </div>
+      <div id="main content">
+         <div id="left">
+            <div class="content-box">
+               <h2>Education</h2>
+               <div class="content-box-details">
+                  <div class="content-box-detail">
+                     <h3>Bachelor of Engineering </h3>
+                     <h4>Electronic & Instrumentation</h4>
+                     <div>
                         <span class="highlight-text-1">07/2015 - 05/2019</span>
                         <span class="highlight-text-1">6.67</span> 
+                     </div>
                   </div>
-                </div>
-                <div class="content-box-detail">
-                    <h3>H S C </h3>
-                    <h4>St' Antony's Higher Secondary school</h4>
-                    <div>
+                  <div class="content-box-detail">
+                     <h3>H S C </h3>
+                     <h4>St' Antony's Higher Secondary school</h4>
+                     <div>
                         <span class="highlight-text-1">05/2014</span>
                         <span class="highlight-text-1">88.4%</span> 
-						</div>
-                </div>
-                <div class="content-box-detail">
-                    <h3>S S L C </h3>
-                    <h4>St' Antony's Higher Secondary school</h4>
-                    <div>
+                     </div>
+                  </div>
+                  <div class="content-box-detail">
+                     <h3>S S L C </h3>
+                     <h4>St' Antony's Higher Secondary school</h4>
+                     <div>
                         <span class="highlight-text-1">04/2012</span>
-						</div>
-                    </div>
-                </div>
+                     </div>
+                  </div>
+               </div>
             </div>
-             <div class="content-box">
-                <h2>Work Experience</h2>
-                <div class= "content-box-details">
-                    <div class="content-box-detail">
-                    <h3>Short term trainee </h3>
-                    <h4>Delphi TVS </h4>
-                    <div>
+            <div class="content-box">
+               <h2>Work Experience</h2>
+               <div class= "content-box-details">
+                  <div class="content-box-detail">
+                     <h3>Short term trainee </h3>
+                     <h4>Delphi TVS </h4>
+                     <div>
                         <span class="highlight-text-1">08/2020 - 06/2021</span>
                         <span class="highlight-text-1">Chennai</span>
-                    </div>
-                    <div>
+                     </div>
+                     <div>
                         <span class="highlight-text-1">Achievements/Task</span>              
-                    </div>
-                 <ul>
-                     <li>Responsible for the various process in heat treatment department such as LPC ( low pressure carburising, chemical blackening, thermal method of deburring) and various knowledge about the processes</li>
-                 </ul>
-              </div>
-            <div class="content-box-detail">
-                <h3>Assistant technician  </h3>
-                <h4>TATA motors </h4>
-                <div>
-                    <span class="highlight-text-1">05/2019 - 07/2019</span>
-                    <span class="highlight-text-1">Tirunelveli</span>
-                </div>
-                <div>
-                    <span class="highlight-text-1">Achievements/Task</span>              
-                 </div> 
-                  <ul>
-                      <li>General services, problem identiﬁcation and engine assembly for LMV commercial vehicles with senior technician</li>
-                  </ul>
-    </div>
-    </div>
-    </div>
-    </div>
-    <div id="right">
-        <div class="content-box">
-            <h2>Soft Skills</h2>
-            <div class="content-box-tags-1">
-                <div class="content-box-tag-1">CAD</div>
-                <div class="content-box-tag-1">Solid Works</div>
-                <div class="content-box-tag-1">Team Player</div>
-                <div class="content-box-tag-1">Adaptability</div>
-                <div class="content-box-tag-1">Team Management</div>
-                <div class="content-box-tag-1">Efficient</div>
-                <div class="content-box-tag-1">Problem Solving</div>
-                <div class="content-box-tag-1">Keen Listener</div>
+                     </div>
+                     <ul>
+                        <li>Responsible for the various process in heat treatment department such as LPC ( low pressure carburising, chemical blackening, thermal method of deburring) and various knowledge about the processes</li>
+                     </ul>
+                  </div>
+                  <div class="content-box-detail">
+                     <h3>Assistant technician  </h3>
+                     <h4>TATA motors </h4>
+                     <div>
+                        <span class="highlight-text-1">05/2019 - 07/2019</span>
+                        <span class="highlight-text-1">Tirunelveli</span>
+                     </div>
+                     <div>
+                        <span class="highlight-text-1">Achievements/Task</span>              
+                     </div>
+                     <ul>
+                        <li>General services, problem identiﬁcation and engine assembly for LMV commercial vehicles with senior technician</li>
+                     </ul>
+                  </div>
+               </div>
             </div>
-        </div>
-        <div class="content-box">
-            <h2>Personal Projects</h2>
-            <div class="content-box-details">
-                <div class="content-box-detail">
-                    <h5>Synthesis and characteristics of waste plastic oil by ultrasonication (04/2019) </h5>
-                    <ul>
+         </div>
+         <div id="right">
+            <div class="content-box">
+               <h2>Soft Skills</h2>
+               <div class="content-box-tags-1">
+                  <div class="content-box-tag-1">CAD</div>
+                  <div class="content-box-tag-1">Solid Works</div>
+                  <div class="content-box-tag-1">Team Player</div>
+                  <div class="content-box-tag-1">Adaptability</div>
+                  <div class="content-box-tag-1">Team Management</div>
+                  <div class="content-box-tag-1">Efficient</div>
+                  <div class="content-box-tag-1">Problem Solving</div>
+                  <div class="content-box-tag-1">Keen Listener</div>
+               </div>
+            </div>
+            <div class="content-box">
+               <h2>Personal Projects</h2>
+               <div class="content-box-details">
+                  <div class="content-box-detail">
+                     <h5>Synthesis and characteristics of waste plastic oil by ultrasonication (04/2019) </h5>
+                     <ul>
                         <li>Conversion of waste plastic into plastic oil by pyrolysis, then mixed with ethanol and converted into biofuel by transesteriﬁcation and ultrasonication </li>
-                    </ul>
-                </div>
-                <div class="content-box-detail">
-                    <h5>Gearless power transmission in angular position (12/2018)</h5>
-                    <ul>
+                     </ul>
+                  </div>
+                  <div class="content-box-detail">
+                     <h5>Gearless power transmission in angular position (12/2018)</h5>
+                     <ul>
                         <li>Transformation of power in horizontal or veritcal position without using the gear inorder to reduce the wear and tear
                         </li>
-                    </ul>
-                </div>
+                     </ul>
+                  </div>
+               </div>
             </div>
-        </div>
-        <div class="content-box">
-            <h2>Certificates</h2>
-            <div class="content-box-details">
-                <div class="content-box-detail">
-                    <h5>Prodigy workshop on Ansys and Creo (10/2018)</h5>
-                    <span class="highlight-text-2">Basics of the softwares and tools</span>
-                </div>
-                <div class="content-box-detail">
-                    <h5>3D Printing (09/2018)</h5>
-                    <span class="highlight-text-2">Evloution of 3D printers and the usage of 3D printers in the current world </span>
-                </div>
-                <div class="content-box-detail">
-                    <h5>Recent trends in automobile engineering 2k18 (02/2018)</h5>
-                    <span class="highlight-text-2">A workshop about automobile basics , current trends and ﬁfth wheel drive
-                    </span>
-                </div>
+            <div class="content-box">
+               <h2>Certificates</h2>
+               <div class="content-box-details">
+                  <div class="content-box-detail">
+                     <h5>Prodigy workshop on Ansys and Creo (10/2018)</h5>
+                     <span class="highlight-text-2">Basics of the softwares and tools</span>
+                  </div>
+                  <div class="content-box-detail">
+                     <h5>3D Printing (09/2018)</h5>
+                     <span class="highlight-text-2">Evloution of 3D printers and the usage of 3D printers in the current world </span>
+                  </div>
+                  <div class="content-box-detail">
+                     <h5>Recent trends in automobile engineering 2k18 (02/2018)</h5>
+                     <span class="highlight-text-2">A workshop about automobile basics , current trends and ﬁfth wheel drive
+                     </span>
+                  </div>
+               </div>
             </div>
-        </div>
-        <div class="content-box">
-            <h2>Languages</h2>
-            <div class="content-box-details">
-                <div class="content-box-detail">
-                    <h5>Tamil</h5>
-                    <span class="highlight-text-2">Mother tongue</span>
-                </div>
-                <div class="content-box-detail">
-                    <h5>English</h5>
-                    <span class="highlight-text-2">Advanced in speaking and writing</span>
-                </div>
-                <div class="content-box-detail">
-                    <h5>Hindi</h5>
-                    <span class="highlight-text-2">Beginner in speaking and writing</span>
-                </div>
+            <div class="content-box">
+               <h2>Languages</h2>
+               <div class="content-box-details">
+                  <div class="content-box-detail">
+                     <h5>Tamil</h5>
+                     <span class="highlight-text-2">Mother tongue</span>
+                  </div>
+                  <div class="content-box-detail">
+                     <h5>English</h5>
+                     <span class="highlight-text-2">Advanced in speaking and writing</span>
+                  </div>
+                  <div class="content-box-detail">
+                     <h5>Hindi</h5>
+                     <span class="highlight-text-2">Beginner in speaking and writing</span>
+                  </div>
+               </div>
             </div>
-        </div>
-        <div class="content-box">
-            <h2>Interests</h2>
-            <div class=content-box-tags-2>
-                <div class="content-box-tags-2">Playing Football</div>
-                <div class="content-box-tags-2">Watching Football</div>
-                <div class="content-box-tags-2">Swimming</div>
+            <div class="content-box">
+               <h2>Interests</h2>
+               <div class=content-box-tags-2>
+                  <div class="content-box-tags-2">Playing Football</div>
+                  <div class="content-box-tags-2">Watching Football</div>
+                  <div class="content-box-tags-2">Swimming</div>
+               </div>
             </div>
-        </div>
-</div>
-</div>
-</body>
+         </div>
+      </div>
+   </body>
 </html>
