--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
          </p>
       </div>
       <div id="contact"> 
-         <a href="prawinaga10@gmail.com" target="_blank">Email Id</a>
-         <a href="9884315897" target="_blank">Mobile No</a>
+         <a href="prawinaga10@gmail.com" target="_blank">Email</a>
+         <a href="9884315897" target="_blank">Contact</a>
          <a href="https://www.google.com/maps/place/Anna+Nagar,+Thanjavur,+Tamil+Nadu+613001/@10.7686171,79.1360059,15z/data=!3m1!4b1!4m5!3m4!1s0x3baab8f2a72b3ae7:0x80df5b015f59a181!8m2!3d10.7685963!4d79.1447607" target="_blank">Location</a>
       </div>
       <div id="main content">
