--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
          <a href="9884315897" target="_blank">Contact</a>
          <a href="https://www.google.com/maps/place/Anna+Nagar,+Thanjavur,+Tamil+Nadu+613001/@10.7686171,79.1360059,15z/data=!3m1!4b1!4m5!3m4!1s0x3baab8f2a72b3ae7:0x80df5b015f59a181!8m2!3d10.7685963!4d79.1447607" target="_blank">Location</a>
       </div>
-      <div id="main content">
+      <div id="main-content">
          <div id="left">
             <div class="content-box">
                <h2>Education</h2>
                <div class="content-box-details">
                   <div class="content-box-detail">
                      <h3>Bachelor of Engineering </h3>
-                     <h4>Electronic & Instrumentation</h4>
+                     <p>Electronic & Instrumentation</p>
                      <div>
                         <span class="highlight-text-1">07/2015 - 05/2019</span>
                         <span class="highlight-text-1">6.67</span> 
@@ -32,7 +32,7 @@
                   </div>
                   <div class="content-box-detail">
                      <h3>H S C </h3>
-                     <h4>St' Antony's Higher Secondary school</h4>
+                     <p>St' Antony's Higher Secondary school</p>
                      <div>
                         <span class="highlight-text-1">05/2014</span>
                         <span class="highlight-text-1">88.4%</span> 
@@ -40,9 +40,10 @@
                   </div>
                   <div class="content-box-detail">
                      <h3>S S L C </h3>
-                     <h4>St' Antony's Higher Secondary school</h4>
+                     <p>St' Antony's Higher Secondary school</p>
                      <div>
                         <span class="highlight-text-1">04/2012</span>
+                        <span class="highlight-text-1">80.4%</span>
                      </div>
                   </div>
                </div>
