--- a/index.html
+++ b/index.html
@@ -86,32 +86,13 @@
             <div class="content-box">
                <h2>Soft Skills</h2>
                <div class="content-box-tags-1">
-                  <div class="content-box-tag-1">CAD</div>
-                  <div class="content-box-tag-1">Solid Works</div>
+                  <div class="content-box-tag-1">Java language</div>
+                  <div class="content-box-tag-1">Html,Css,Js</div>
                   <div class="content-box-tag-1">Team Player</div>
-                  <div class="content-box-tag-1">Adaptability</div>
                   <div class="content-box-tag-1">Team Management</div>
                   <div class="content-box-tag-1">Efficient</div>
                   <div class="content-box-tag-1">Problem Solving</div>
                   <div class="content-box-tag-1">Keen Listener</div>
-               </div>
-            </div>
-            <div class="content-box">
-               <h2>Personal Projects</h2>
-               <div class="content-box-details">
-                  <div class="content-box-detail">
-                     <h5>Synthesis and characteristics of waste plastic oil by ultrasonication (04/2019) </h5>
-                     <ul>
-                        <li>Conversion of waste plastic into plastic oil by pyrolysis, then mixed with ethanol and converted into biofuel by transesteriﬁcation and ultrasonication </li>
-                     </ul>
-                  </div>
-                  <div class="content-box-detail">
-                     <h5>Gearless power transmission in angular position (12/2018)</h5>
-                     <ul>
-                        <li>Transformation of power in horizontal or veritcal position without using the gear inorder to reduce the wear and tear
-                        </li>
-                     </ul>
-                  </div>
                </div>
             </div>
             <div class="content-box">
