add-some-changes

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
    <head>
       <title>Resume</title>
       <link rel="stylesheet" href="css/reset.css">
@@ -13,9 +14,9 @@
          </p>
       </div>
       <div id="contact"> 
-         <a href="prawinaga10@gmail.com" target="_blank">Email</a>
-         <a href="9884315897" target="_blank">Contact</a>
-         <a href="https://www.google.com/maps/place/Anna+Nagar,+Thanjavur,+Tamil+Nadu+613001/@10.7686171,79.1360059,15z/data=!3m1!4b1!4m5!3m4!1s0x3baab8f2a72b3ae7:0x80df5b015f59a181!8m2!3d10.7685963!4d79.1447607" target="_blank">Location</a>
+         <a href="prawinaga10@gmail.com" target="_blank">praveenneymar20@gmail.com</a>
+         <a href="9884315897" target="_blank">No-9884315897</a>
+         <a href="https://www.google.com/maps/place/Anna+Nagar,+Thanjavur,+Tamil+Nadu+613001/@10.7686171,79.1360059,15z/data=!3m1!4b1!4m5!3m4!1s0x3baab8f2a72b3ae7:0x80df5b015f59a181!8m2!3d10.7685963!4d79.1447607" target="_blank">Thanjavur,India</a>
       </div>
       <div id="main-content">
          <div id="left">
@@ -133,9 +134,9 @@
             <div class="content-box">
                <h2>Interests</h2>
                <div class=content-box-tags-2>
-                  <div class="content-box-tags-2">Playing Football</div>
-                  <div class="content-box-tags-2">Watching Football</div>
-                  <div class="content-box-tags-2">Swimming</div>
+                  <div class="content-box-tag-2">Playing Football</div>
+                  <div class="content-box-tag-2">Watching Football</div>
+                  <div class="content-box-tag-2">Swimming</div>
                </div>
             </div>
          </div>
