--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
    </head>
    <body>
       <div id="header">
+        <div class="header-left">
          <h1> Praveen Nagaraj</h1>
          <h3>Electronics & Instrumentation</h3>
          <p>To secure a challenging position in a reputable organization to expand my learnings, knowledge, and skills.
             Secure a responsible career opportunity to fully utilize my training and skills, while making a significant contribution to the success of the company.
          </p>
+        </div>
+        <div class="header-right">image will come</div>
       </div>
       <div id="contact"> 
          <a href="prawinaga10@gmail.com" target="_blank">praveenneymar20@gmail.com</a>
@@ -90,7 +93,6 @@
                   <div class="content-box-tag-1">Java language</div>
                   <div class="content-box-tag-1">Html,Css,Js</div>
                   <div class="content-box-tag-1">Team Player</div>
-                  <div class="content-box-tag-1">Team Management</div>
                   <div class="content-box-tag-1">Efficient</div>
                   <div class="content-box-tag-1">Problem Solving</div>
                   <div class="content-box-tag-1">Keen Listener</div>
